Update WeChat QR code and WeChat ID

--- a/index.html
+++ b/index.html
@@ -139,13 +139,11 @@
             <div class="flex flex-col items-center">
                 <div class="bg-gray-50 rounded-lg p-6 mb-6">
                     <div class="bg-white p-6 rounded-lg flex justify-center">
-                        <div class="w-48 h-48 sm:w-56 sm:h-56 bg-gray-200 rounded flex items-center justify-center">
-                            <span class="text-gray-500 text-sm sm:text-base">微信二维码</span>
-                        </div>
+                        <img src="assets/qr_code.jpg" alt="微信二维码" class="w-48 h-48 sm:w-56 sm:h-56 object-contain rounded">
                     </div>
                 </div>
                 <div class="text-center space-y-2 mb-6">
-                    <p class="text-gray-700 text-sm sm:text-base font-medium">微信号：your-wechat-id</p>
+                    <p class="text-gray-700 text-sm sm:text-base font-medium">微信号：l20222336</p>
                     <p class="text-gray-500 text-xs sm:text-sm">添加后请发送"购买期末突击"即可</p>
                 </div>
                 <div class="bg-blue-50 border border-blue-200 rounded-lg p-4 w-full">
