--- a/unlock.html
+++ b/unlock.html
@@ -193,12 +193,10 @@
 
                 <div class="bg-gray-50 rounded-lg p-4 sm:p-6 mb-4 sm:mb-6">
                     <div class="bg-white p-4 sm:p-6 rounded-lg flex justify-center mb-4">
-                        <div class="w-48 h-48 sm:w-56 sm:h-56 bg-gray-200 rounded flex items-center justify-center">
-                            <span class="text-gray-500 text-sm sm:text-base">微信二维码</span>
-                        </div>
+                        <img src="assets/qr_code.jpg" alt="微信二维码" class="w-48 h-48 sm:w-56 sm:h-56 object-contain rounded">
                     </div>
                     <div class="text-center space-y-2">
-                        <p class="text-gray-700 text-sm sm:text-base font-medium">微信号：your-wechat-id</p>
+                        <p class="text-gray-700 text-sm sm:text-base font-medium">微信号：l20222336</p>
                         <p class="text-gray-500 text-xs sm:text-sm">添加后请发送"购买期末突击"即可</p>
                     </div>
                 </div>
