Update QR code to PNG format and add 50 verification codes

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             <div class="flex flex-col items-center">
                 <div class="bg-gray-50 rounded-lg p-6 mb-6">
                     <div class="bg-white p-6 rounded-lg flex justify-center">
-                        <img src="assets/qr_code.jpg" alt="微信二维码" class="w-48 h-48 sm:w-56 sm:h-56 object-contain rounded">
+                        <img src="assets/qr_code.png" alt="微信二维码" class="w-48 h-48 sm:w-56 sm:h-56 object-contain rounded">
                     </div>
                 </div>
                 <div class="text-center space-y-2 mb-6">
