Enhance homepage design with improved visual appeal and detailed feature descriptions

--- a/index.html
+++ b/index.html
@@ -62,96 +62,168 @@
     </nav>
 
     <main class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-8 sm:py-12">
-        <div class="text-center mb-8 sm:mb-12">
-            <h1 class="text-2xl sm:text-3xl md:text-4xl font-bold text-gray-900 mb-4">政治经济学期末突击</h1>
-            <p class="text-lg sm:text-xl text-gray-600 mb-6 sm:mb-8">高效复习，轻松应对期末考试</p>
-            <div class="flex flex-wrap justify-center gap-4 sm:gap-6">
-                <div class="bg-white rounded-lg shadow-md p-4 sm:p-6 w-36 sm:w-48">
-                    <div class="text-2xl sm:text-3xl font-bold text-indigo-600">67</div>
-                    <div class="text-sm sm:text-base text-gray-600 mt-2">精选闪卡</div>
-                </div>
-                <div class="bg-white rounded-lg shadow-md p-4 sm:p-6 w-36 sm:w-48">
-                    <div class="text-2xl sm:text-3xl font-bold text-indigo-600">15</div>
-                    <div class="text-sm sm:text-base text-gray-600 mt-2">核心概念</div>
-                </div>
-                <div class="bg-white rounded-lg shadow-md p-4 sm:p-6 w-36 sm:w-48">
-                    <div class="text-2xl sm:text-3xl font-bold text-indigo-600">100%</div>
-                    <div class="text-sm sm:text-base text-gray-600 mt-2">考点覆盖</div>
+        <div class="bg-gradient-to-r from-indigo-600 via-purple-600 to-pink-500 rounded-2xl shadow-2xl p-6 sm:p-10 mb-8 sm:mb-12 text-white">
+            <div class="text-center">
+                <h1 class="text-3xl sm:text-4xl md:text-5xl font-bold mb-4 sm:mb-6">政治经济学期末突击</h1>
+                <p class="text-lg sm:text-xl md:text-2xl text-indigo-100 mb-4 sm:mb-6">期末考试倒计时，高效复习刻不容缓！</p>
+                <p class="text-sm sm:text-base md:text-lg text-indigo-200 mb-6 sm:mb-8 max-w-3xl mx-auto">
+                    期末考试即将来临，时间紧迫，任务繁重。你是否还在为厚厚的教材发愁？是否担心复习效率低下，无法掌握重点？
+                    本系统专为期末突击设计，通过科学的记忆方法和精准的知识梳理，帮助你在最短时间内掌握核心考点，
+                    轻松应对考试挑战！
+                </p>
+                <div class="flex flex-wrap justify-center gap-4 sm:gap-6">
+                    <div class="bg-white/20 backdrop-blur-sm rounded-xl p-4 sm:p-6 w-36 sm:w-48 border border-white/30">
+                        <div class="text-3xl sm:text-4xl font-bold">67</div>
+                        <div class="text-sm sm:text-base text-indigo-100 mt-2">精选闪卡</div>
+                    </div>
+                    <div class="bg-white/20 backdrop-blur-sm rounded-xl p-4 sm:p-6 w-36 sm:w-48 border border-white/30">
+                        <div class="text-3xl sm:text-4xl font-bold">15</div>
+                        <div class="text-sm sm:text-base text-indigo-100 mt-2">核心概念</div>
+                    </div>
+                    <div class="bg-white/20 backdrop-blur-sm rounded-xl p-4 sm:p-6 w-36 sm:w-48 border border-white/30">
+                        <div class="text-3xl sm:text-4xl font-bold">100%</div>
+                        <div class="text-sm sm:text-base text-indigo-100 mt-2">考点覆盖</div>
+                    </div>
                 </div>
             </div>
+        </div>
+
+        <div class="text-center mb-8 sm:mb-12">
+            <h2 class="text-2xl sm:text-3xl md:text-4xl font-bold text-gray-900 mb-4">三大核心学习工具</h2>
+            <p class="text-base sm:text-lg text-gray-600">科学记忆方法 + 精准知识梳理 = 高效复习</p>
         </div>
 
         <div class="grid grid-cols-1 md:grid-cols-3 gap-6 sm:gap-8 mb-8 sm:mb-12">
-            <div class="bg-white rounded-lg shadow-md p-6 hover:shadow-lg transition-shadow">
-                <div class="flex items-center mb-4">
-                    <div class="bg-indigo-100 rounded-full p-3">
-                        <svg class="w-6 h-6 text-indigo-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <div class="bg-white rounded-2xl shadow-lg p-6 sm:p-8 hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-1 border border-gray-100">
+                <div class="flex items-center mb-4 sm:mb-6">
+                    <div class="bg-gradient-to-br from-indigo-500 to-purple-600 rounded-2xl p-4 shadow-lg">
+                        <svg class="w-8 h-8 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5H7a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 002 2h2a2 2 0 002-2M9 5a2 2 0 012-2h2a2 2 0 012 2"></path>
                         </svg>
                     </div>
-                    <h3 class="text-xl font-semibold ml-3">闪卡学习</h3>
+                    <h3 class="text-xl sm:text-2xl font-bold ml-4 text-gray-900">闪卡学习</h3>
                 </div>
-                <p class="text-gray-600 mb-4">67个高频考点闪卡，点击翻转查看答案，高效记忆</p>
-                <a href="flashcards.html" class="text-indigo-600 hover:text-indigo-700 font-medium">开始学习 →</a>
+                <p class="text-gray-600 mb-4 text-sm sm:text-base leading-relaxed">
+                    <span class="font-semibold text-indigo-600">67个高频考点闪卡</span>，采用间隔重复记忆法，科学安排复习节奏。
+                    点击翻转查看答案，主动回忆强化记忆，告别死记硬背，让知识点真正内化！
+                </p>
+                <div class="bg-indigo-50 rounded-xl p-4 mb-4">
+                    <p class="text-sm text-indigo-800">
+                        <span class="font-bold">✓</span> 覆盖所有考试重点<br>
+                        <span class="font-bold">✓</span> 随时随地学习<br>
+                        <span class="font-bold">✓</span> 高效记忆法
+                    </p>
+                </div>
+                <a href="flashcards.html" class="inline-flex items-center text-indigo-600 hover:text-indigo-700 font-semibold text-sm sm:text-base transition-colors">
+                    开始学习 
+                    <svg class="w-5 h-5 ml-1" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7l5 5m0 0l-5 5m5-5H6"></path>
+                    </svg>
+                </a>
             </div>
 
-            <div class="bg-white rounded-lg shadow-md p-6 hover:shadow-lg transition-shadow">
-                <div class="flex items-center mb-4">
-                    <div class="bg-green-100 rounded-full p-3">
-                        <svg class="w-6 h-6 text-green-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <div class="bg-white rounded-2xl shadow-lg p-6 sm:p-8 hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-1 border border-gray-100">
+                <div class="flex items-center mb-4 sm:mb-6">
+                    <div class="bg-gradient-to-br from-green-500 to-teal-600 rounded-2xl p-4 shadow-lg">
+                        <svg class="w-8 h-8 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z"></path>
                         </svg>
                     </div>
-                    <h3 class="text-xl font-semibold ml-3">核心概念</h3>
+                    <h3 class="text-xl sm:text-2xl font-bold ml-4 text-gray-900">核心概念</h3>
                 </div>
-                <p class="text-gray-600 mb-4">15个核心概念详细解析，包含定义、特征、公式等</p>
-                <a href="concepts.html" class="text-indigo-600 hover:text-indigo-700 font-medium">查看概念 →</a>
+                <p class="text-gray-600 mb-4 text-sm sm:text-base leading-relaxed">
+                    <span class="font-semibold text-green-600">15个核心概念深度解析</span>，每个概念都包含精确定义、关键特征、适用场景和典型例题。
+                    系统化梳理知识框架，让你对政治经济学有全面而深入的理解！
+                </p>
+                <div class="bg-green-50 rounded-xl p-4 mb-4">
+                    <p class="text-sm text-green-800">
+                        <span class="font-bold">✓</span> 概念定义清晰<br>
+                        <span class="font-bold">✓</span> 特征要点提炼<br>
+                        <span class="font-bold">✓</span> 例题解析透彻
+                    </p>
+                </div>
+                <a href="concepts.html" class="inline-flex items-center text-green-600 hover:text-green-700 font-semibold text-sm sm:text-base transition-colors">
+                    查看概念 
+                    <svg class="w-5 h-5 ml-1" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7l5 5m0 0l-5 5m5-5H6"></path>
+                    </svg>
+                </a>
             </div>
 
-            <div class="bg-white rounded-lg shadow-md p-6 hover:shadow-lg transition-shadow">
-                <div class="flex items-center mb-4">
-                    <div class="bg-yellow-100 rounded-full p-3">
-                        <svg class="w-6 h-6 text-yellow-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <div class="bg-white rounded-2xl shadow-lg p-6 sm:p-8 hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-1 border border-gray-100">
+                <div class="flex items-center mb-4 sm:mb-6">
+                    <div class="bg-gradient-to-br from-orange-500 to-red-600 rounded-2xl p-4 shadow-lg">
+                        <svg class="w-8 h-8 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253"></path>
                         </svg>
                     </div>
-                    <h3 class="text-xl font-semibold ml-3">重点文档</h3>
+                    <h3 class="text-xl sm:text-2xl font-bold ml-4 text-gray-900">重点文档</h3>
                 </div>
-                <p class="text-gray-600 mb-4">完整版重点文档，涵盖所有考试要点</p>
-                <a href="unlock.html" class="text-indigo-600 hover:text-indigo-700 font-medium">解锁下载 →</a>
+                <p class="text-gray-600 mb-4 text-sm sm:text-base leading-relaxed">
+                    <span class="font-semibold text-orange-600">完整版重点文档</span>，精心标注所有考试要点，涵盖名词解释、简答题、论述题等所有题型。
+                    一份文档在手，考试重点全掌握，省时省力，复习效率翻倍！
+                </p>
+                <div class="bg-orange-50 rounded-xl p-4 mb-4">
+                    <p class="text-sm text-orange-800">
+                        <span class="font-bold">✓</span> 考点标注清晰<br>
+                        <span class="font-bold">✓</span> 题型覆盖全面<br>
+                        <span class="font-bold">✓</span> 重点突出明确
+                    </p>
+                </div>
+                <a href="unlock.html" class="inline-flex items-center text-orange-600 hover:text-orange-700 font-semibold text-sm sm:text-base transition-colors">
+                    解锁下载 
+                    <svg class="w-5 h-5 ml-1" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7l5 5m0 0l-5 5m5-5H6"></path>
+                    </svg>
+                </a>
             </div>
         </div>
 
-        <div class="bg-gradient-to-r from-indigo-600 to-purple-600 rounded-lg shadow-lg p-6 sm:p-8 text-white">
+        <div class="bg-gradient-to-r from-indigo-600 via-purple-600 to-pink-500 rounded-2xl shadow-2xl p-6 sm:p-10 text-white mb-8 sm:mb-12">
             <div class="flex flex-col items-center text-center">
                 <div class="mb-4 sm:mb-0">
-                    <h2 class="text-xl sm:text-2xl font-bold mb-2">解锁全部内容</h2>
-                    <p class="text-indigo-100 text-sm sm:text-base">获取完整闪卡库、核心概念表和重点文档</p>
+                    <h2 class="text-2xl sm:text-3xl md:text-4xl font-bold mb-3 sm:mb-4">立即解锁全部内容</h2>
+                    <p class="text-indigo-100 text-sm sm:text-base md:text-lg mb-4 sm:mb-6 max-w-2xl mx-auto">
+                        获取完整闪卡库、核心概念表和重点文档，全面掌握政治经济学考点
+                    </p>
+                    <div class="flex flex-wrap justify-center gap-3 sm:gap-4 mb-4 sm:mb-6">
+                        <span class="bg-white/20 backdrop-blur-sm px-3 py-1 sm:px-4 sm:py-2 rounded-full text-sm border border-white/30">✓ 67个闪卡</span>
+                        <span class="bg-white/20 backdrop-blur-sm px-3 py-1 sm:px-4 sm:py-2 rounded-full text-sm border border-white/30">✓ 15个核心概念</span>
+                        <span class="bg-white/20 backdrop-blur-sm px-3 py-1 sm:px-4 sm:py-2 rounded-full text-sm border border-white/30">✓ 完整重点文档</span>
+                    </div>
                 </div>
-                <a href="unlock.html" class="mt-4 sm:mt-0 bg-white text-indigo-600 px-6 sm:px-8 py-3 rounded-lg font-semibold hover:bg-gray-100 transition-colors">
+                <a href="unlock.html" class="mt-4 sm:mt-0 bg-white text-indigo-600 px-8 sm:px-10 py-3 sm:py-4 rounded-xl font-bold text-base sm:text-lg hover:bg-gray-100 transition-all duration-300 transform hover:scale-105 shadow-lg">
                     立即解锁 ¥9.9
                 </a>
             </div>
         </div>
 
-        <div class="mt-8 sm:mt-12 bg-white rounded-lg shadow-md p-6 sm:p-8">
-            <h2 class="text-xl sm:text-2xl font-bold text-gray-900 mb-6">扫码加微信购买</h2>
+        <div class="mt-8 sm:mt-12 bg-white rounded-2xl shadow-xl p-6 sm:p-10 border border-gray-100">
+            <div class="text-center mb-6 sm:mb-8">
+                <h2 class="text-2xl sm:text-3xl font-bold text-gray-900 mb-3 sm:mb-4">扫码加微信购买</h2>
+                <p class="text-gray-600 text-sm sm:text-base">简单快捷，安全可靠</p>
+            </div>
             <div class="flex flex-col items-center">
-                <div class="bg-gray-50 rounded-lg p-6 mb-6">
-                    <div class="bg-white p-6 rounded-lg flex justify-center">
-                        <img src="assets/qr_code.png" alt="微信二维码" class="w-48 h-48 sm:w-56 sm:h-56 object-contain rounded">
+                <div class="bg-gradient-to-br from-indigo-50 to-purple-50 rounded-2xl p-6 sm:p-8 mb-6 sm:mb-8 w-full max-w-md border border-indigo-100">
+                    <div class="bg-white rounded-xl p-6 shadow-md flex justify-center">
+                        <img src="assets/qr_code.png" alt="微信二维码" class="w-48 h-48 sm:w-56 sm:h-56 object-contain rounded-lg">
                     </div>
                 </div>
-                <div class="text-center space-y-2 mb-6">
-                    <p class="text-gray-700 text-sm sm:text-base font-medium">微信号：l20222336</p>
-                    <p class="text-gray-500 text-xs sm:text-sm">添加后请发送"购买期末突击"即可</p>
+                <div class="text-center space-y-2 sm:space-y-3 mb-6 sm:mb-8">
+                    <p class="text-gray-900 text-base sm:text-lg font-semibold">微信号：<span class="text-indigo-600">l20222336</span></p>
+                    <p class="text-gray-600 text-sm sm:text-base">添加后请发送"购买期末突击"即可</p>
                 </div>
-                <div class="bg-blue-50 border border-blue-200 rounded-lg p-4 w-full">
-                    <h4 class="font-semibold text-blue-900 text-sm sm:text-base mb-2">购买流程：</h4>
-                    <ol class="text-blue-800 text-xs sm:text-sm space-y-1 sm:space-y-2 list-decimal list-inside">
+                <div class="bg-gradient-to-r from-blue-50 to-indigo-50 rounded-xl p-5 sm:p-6 w-full max-w-md border border-blue-200">
+                    <h4 class="font-bold text-blue-900 text-base sm:text-lg mb-3 sm:mb-4 flex items-center">
+                        <svg class="w-5 h-5 sm:w-6 sm:h-6 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+                        </svg>
+                        购买流程：
+                    </h4>
+                    <ol class="text-blue-800 text-sm sm:text-base space-y-2 sm:space-y-3 list-decimal list-inside">
                         <li>扫描上方二维码添加微信</li>
                         <li>发送"购买期末突击"</li>
-                        <li>支付 ¥9.9 后领取验证码</li>
+                        <li>支付 <span class="font-bold text-indigo-600">¥9.9</span> 后领取验证码</li>
                         <li>在解锁页面输入验证码即可</li>
                     </ol>
                 </div>
