--- a/unlock.html
+++ b/unlock.html
@@ -47,16 +47,22 @@
 
     <main class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8 py-12">
         <div x-show="isUnlocked" class="bg-green-50 border-l-4 border-green-400 p-4 mb-8">
-            <div class="flex">
+            <div class="flex flex-col sm:flex-row">
                 <div class="flex-shrink-0">
                     <svg class="h-5 w-5 text-green-400" viewBox="0 0 20 20" fill="currentColor">
                         <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"/>
                     </svg>
                 </div>
                 <div class="ml-3">
-                    <p class="text-sm text-green-700">
+                    <p class="text-sm text-green-700 mb-3">
                         恭喜！您已成功解锁全部内容，现在可以访问所有闪卡、核心概念和重点文档。
                     </p>
+                    <a href="assets/政经.docx" download class="inline-flex items-center bg-indigo-600 text-white px-4 py-2 rounded-lg text-sm font-medium hover:bg-indigo-700 transition-colors">
+                        <svg class="w-4 h-4 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-8l-4-4m0 0L8 8m4-4v12"></path>
+                        </svg>
+                        下载政经重点文档
+                    </a>
                 </div>
             </div>
         </div>
