feat(导航): 添加移动菜单点击后自动关闭功能并增加页脚友链
为移动端菜单项添加点击后自动关闭功能，提升用户体验
在页脚添加友链部分，包含指向外部题库的链接

--- a/flashcards.html
+++ b/flashcards.html
@@ -54,10 +54,10 @@
         </div>
         <div x-show="mobileMenuOpen" x-transition class="sm:hidden bg-white border-t">
             <div class="px-4 py-3 space-y-2">
-                <a href="index.html" class="block text-gray-700 hover:text-indigo-600 px-3 py-2 rounded-md text-sm font-medium">首页</a>
-                <a href="flashcards.html" class="block text-indigo-600 px-3 py-2 rounded-md text-sm font-medium">闪卡学习</a>
-                <a href="concepts.html" class="block text-gray-700 hover:text-indigo-600 px-3 py-2 rounded-md text-sm font-medium">核心概念</a>
-                <a href="unlock.html" class="block bg-indigo-600 text-white px-3 py-2 rounded-md text-sm font-medium">解锁全部</a>
+                <a href="index.html" @click="mobileMenuOpen = false" class="block text-gray-700 hover:text-indigo-600 px-3 py-2 rounded-md text-sm font-medium">首页</a>
+                <a href="flashcards.html" @click="mobileMenuOpen = false" class="block text-indigo-600 px-3 py-2 rounded-md text-sm font-medium">闪卡学习</a>
+                <a href="concepts.html" @click="mobileMenuOpen = false" class="block text-gray-700 hover:text-indigo-600 px-3 py-2 rounded-md text-sm font-medium">核心概念</a>
+                <a href="unlock.html" @click="mobileMenuOpen = false" class="block bg-indigo-600 text-white px-3 py-2 rounded-md text-sm font-medium">解锁全部</a>
             </div>
         </div>
     </nav>
