--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
         </div>
         <div x-show="mobileMenuOpen" x-transition class="sm:hidden bg-white border-t">
             <div class="px-4 py-3 space-y-2">
-                <a href="index.html" class="block text-gray-700 hover:text-indigo-600 px-3 py-2 rounded-md text-sm font-medium">首页</a>
-                <a href="flashcards.html" class="block text-gray-700 hover:text-indigo-600 px-3 py-2 rounded-md text-sm font-medium">闪卡学习</a>
-                <a href="concepts.html" class="block text-gray-700 hover:text-indigo-600 px-3 py-2 rounded-md text-sm font-medium">核心概念</a>
-                <a href="unlock.html" class="block bg-indigo-600 text-white px-3 py-2 rounded-md text-sm font-medium">解锁全部</a>
+                <a href="index.html" @click="mobileMenuOpen = false" class="block text-gray-700 hover:text-indigo-600 px-3 py-2 rounded-md text-sm font-medium">首页</a>
+                <a href="flashcards.html" @click="mobileMenuOpen = false" class="block text-gray-700 hover:text-indigo-600 px-3 py-2 rounded-md text-sm font-medium">闪卡学习</a>
+                <a href="concepts.html" @click="mobileMenuOpen = false" class="block text-gray-700 hover:text-indigo-600 px-3 py-2 rounded-md text-sm font-medium">核心概念</a>
+                <a href="unlock.html" @click="mobileMenuOpen = false" class="block bg-indigo-600 text-white px-3 py-2 rounded-md text-sm font-medium">解锁全部</a>
             </div>
         </div>
     </nav>
@@ -233,7 +233,11 @@
 
     <footer class="bg-gray-800 text-white mt-12 py-8">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
-            <p class="text-gray-400">© 2024 期末突击 - 高效复习，轻松应对期末考试</p>
+            <p class="text-gray-400 mb-4">© 2024 期末突击 - 高效复习，轻松应对期末考试</p>
+            <div class="flex justify-center items-center space-x-4 text-sm">
+                <span class="text-gray-500">友链：</span>
+                <a href="https://vimalinx.xyz/tiku" target="_blank" rel="noopener noreferrer" class="text-indigo-400 hover:text-indigo-300 transition-colors">管理学考试练习题题库</a>
+            </div>
         </div>
     </footer>
 </body>
